fixed motions on mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,9 @@
   text-align: center;
   font-size: 30px;
 }
+
+@media (max-width: 768px) {
+  .circle {
+    display: none;
+  }
+}
